--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,25 @@
                 android:layout_height="wrap_content"
                 android:hint="메세지 입력"/>
 
+            <EditText
+                android:id="@+id/pwEdt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="비밀번호 입력"/>
+
+
             <Button
                 android:id="@+id/inputBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="입력"/>
+
+            <Button
+                android:id="@+id/loginBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="로그인"/>
+
 
             <TextView
                 android:id="@+id/messageTxt"
